// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth/certifications/files endpoints Upload a state certification letter/file | POST /auth/certifications/files when authenticated as a user with permission with a non-existant apd ID 1`] = `
Object {
  "error": "invalid Token",
}
`;

exports[`auth/certifications/files endpoints Upload a state certification letter/file | POST /auth/certifications/files when authenticated as a user with permission with a valid pdf 1`] = `
Object {
  "url": "/auth/certifications/files/a11bb383d2022112f5762aef0616574f5177402a788eac510d527871a6a6bf0a",
}
`;

exports[`auth/certifications/files endpoints Upload a state certification letter/file | POST /auth/certifications/files when authenticated as a user with permission with an invalid request (jpg) 1`] = `
Object {
  "error": "Unsupported file format",
}
`;
